# spolm

./: .gitignore  .pre-commit-config.yaml  .python-version  Makefile  README.md  data.dvc  noxfile.py  pyproject.toml
.dvc/: config
.github/: dependabot.yml
.github/workflows/: constraints.txt  tests.yml
docs/: conf.py  index.rst  requirements.txt  usage.rst
spolm/: __init__.py  __main__.py  penguin_pipeline.py
spolm/data/: make_dataset.py
spolm/features/: build_features.py  constants.py
spolm/models/: predict_model.py  train_model.py
spolm/visualization/: visualize.py
tests/: test_main.py  test_make_dataset.py  test_penguin_pipeline.py
tests/testdata/: iris.csv
tfx/pipelines/penguin_local/_wheels/: tfx_user_code_Trainer-0.0+9e38396e9c5475838f03e8bb1bb8857676589d2f6f621964f492343b969a9a1b-py3-none-any.whl  tfx_user_code_Transform-0.0+9e38396e9c5475838f03e8bb1bb8857676589d2f6f621964f492343b969a9a1b-py3-none-any.whl
